--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,12 @@
-
-
-  <div class="onesheet">
-  </div>
+<p id="slideshow">
+   <img src="/assets/main1.jpg" alt="画像1" class="active">
+   <img src="/assets/main2.jpg" alt="画像2">
+   <img src="/assets/main3.jpg" alt="画像3">
+   <img src="/assets/main4.jpg" alt="画像4">
+   <img src="/assets/main5.jpg" alt="画像5">
+   <img src="/assets/main6.jpg" alt="画像5">
+   <img src="/assets/main7.jpg" alt="画像5">
+</p>
   <div class="block1"></div>
   <div class="block2">
   <%= image_tag("YouTube-logo.png", class:"youtube-logo") %>
