--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,29 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/f30c31a4d9.js" crossorigin="anonymous"></script>
-    
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <script type="text/javascript">
+function slideSwitch() {
+   var $active = $('#slideshow img.active');
+
+   if ( $active.length == 0 ) $active = $('#slideshow img:last');
+
+   var $next =  $active.next().length ? $active.next()
+      : $('#slideshow img:first');
+
+   $active.addClass('last-active');
+
+   $next.css({opacity: 0.0})
+      .addClass('active')
+      .animate({opacity: 1.0}, 2000, function() {
+           $active.removeClass('active last-active');
+      });
+}
+
+$(function() {
+   setInterval( "slideSwitch()", 8000 );
+});
+</script>
   </head>
 
   <body>
@@ -36,7 +58,7 @@
         <%= link_to "Trumpet", trumpet_posts_path %>
         <%= link_to "Violin", violin_posts_path %>
         <%= link_to "Strings", strings_posts_path %>
-        <%= link_to "Wind", wind_posts_path %>
+        <%= link_to "Winds", wind_posts_path %>
         <%= link_to "DTM", dtm_posts_path %>
         <%= link_to "Others", others_posts_path %>
       </ul>
@@ -50,10 +72,12 @@
           <div class="nav__left">
             <%= link_to image_tag("My Gear.png", class: :logo), root_path %>
           </div>
-          <div class="nav__center"><%= form_with(url: root_path, local: true, method: :get, class: "search-form") do |form| %>
-  <%= form.text_field :keyword, placeholder: "🔎検索する", class: "search-input" %>
-  <%= form.submit "検索",  class: "search-btn" %>
-<% end %></div>
+          <div class="nav__center">
+          <%= form_with(url: search_posts_path, local: true, method: :get, class: "search-form") do |form| %>
+            <%= form.text_field :keyword, placeholder: "キーワードを入力", class: "search-input" %>
+            <%= form.submit "検索",  class: "search-btn" %>
+          <% end %>
+          </div>
         
           <% if user_signed_in? %>
             <div class="nav__right">
@@ -81,8 +105,8 @@
       
       <hr> 
     </header>
-    
     <%= yield %>
     <div class="footer"><p class="footer-f">◎ Everyone use MyGear.</p></div>
+
   </body>
 </html>
