--- a/app/views/posts/drum.html.erb
+++ b/app/views/posts/drum.html.erb
@@ -1,4 +1,4 @@
-  <div class="twosheet">
+  <div class="drum">
   <h1 class="head-border">Drums</h1>
   <ul class="card-list">
     <% @posts.each do |post| %>
