--- a/app/views/posts/sax.html.erb
+++ b/app/views/posts/sax.html.erb
@@ -1,4 +1,4 @@
-  <div class="twosheet">
+  <div class="sax">
   <h1 class="head-border">Sax</h1>
   <ul class="card-list">
     <% @posts.each do |post| %>
