--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,6 +6,9 @@
    <img src="/assets/main5.jpg" alt="画像5">
    <img src="/assets/main6.jpg" alt="画像5">
    <img src="/assets/main7.jpg" alt="画像5">
+   <p class="aiu">Welcome to MyGear.</p>
+   <p class="iu">MyGear へようこそ</p>
+   <p class="eo">さっそく楽器の写真を共有しましょう !</p>
 </p>
   <div class="block1"></div>
   <div class="block2">
@@ -14,7 +17,32 @@
   <iframe class="youtube" width="900" height="515" src="https://www.youtube.com/embed/WOY6nwXNteU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="block3"></div>
-  <div class="slide-one"></div>
+  <div class="slide-one">
+    <div class="mb-600">
+        <li class="fadein">
+      <%= image_tag("slide.png", class:"google-btn") %>
+        <p class="inst-title">#新しく買いました！</p>
+        </li>
+                <p id="slide1" class="fadein">投稿の方法</p>
+        <p id="slide2" class="fadein">右下の ' 投稿する ' を押してタイトル、<br>詳細、写真、カテゴリー(必須)を記入して<br>投稿します。</p>
+    </div>
+  </div>
+
+  <script>
+  $(function () {
+    $(window).scroll(function () {
+      $('.fadein').each(function () {
+        var targetElement = $(this).offset().top;
+        var scroll = $(window).scrollTop();
+        var windowHeight = $(window).height();
+        if (scroll > targetElement - windowHeight + 150) {
+            $(this).addClass('scrollin');
+        }
+      });
+    });
+  });
+  </script>
+
   <div class="twosheet">
   <h1 class="head-border">Instruments</h1>
   <ul class="card-list">
