--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -110,6 +110,8 @@ $(function() {
     </header>
     <%= yield %>
 
-
+    <footer class="footer">
+      <p class="copyright">Copyright © PROTO SPACE All rights reserved.</p>
+    </footer>
   </body>
 </html>
