--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -427,7 +427,7 @@ hr {
 
 .twosheet {
   width: 100%;
-  height: 1500px;
+  height: auto;
   padding-top: 20px;
   background: #83a4d4;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
@@ -591,6 +591,7 @@ html, body {
   right: 26px;
   bottom: 60px;
   transition: .2s;
+  z-index: 2;
 }
 
 .postpage:hover {
@@ -646,7 +647,7 @@ html, body {
   height: 70px;
   width: 100%;
   background-color: black;
-  opacity: 0.9;
+  opacity: 0.8;
 }
 
 .footer-f {
@@ -765,6 +766,7 @@ textarea:focus {
   background-repeat: no-repeat;
   background-attachment: fixed;
   padding-bottom: 770px;
+  height: auto;
 }
 
 .bass {
