--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -34,7 +34,7 @@
        </div> 
   </div>
 
-<%= link_to @post.user.nickname, user_path(@post.id), class: :showmy_btn %>
+<%= link_to @post.user.nickname, user_path(@post.user), class: :showmy_btn %>
 <%= link_to "削除する", post_path(@post.id), method: :delete, class: :showdestroy_btn %>
 <%= link_to "編集する", edit_post_path(@post.id), class: :showedit_btn %>
 </div>
