--- a/app/views/posts/trumpet.html.erb
+++ b/app/views/posts/trumpet.html.erb
@@ -4,7 +4,7 @@
     <% @posts.each do |post| %>
     <li class="card">
       <%= link_to image_tag(post.image, class:"google-btn"), post_path(post.id) %>
-        <p class="inst-title"><%= post.title %></p>
+        <p class="inst_title"><%= post.title %></p>
         </li>
     <% end %>
   </div>
