--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,14 +15,16 @@
    <div class="title-h3">Comments.</div>
     <hr class="title-hr3">
      <div class="show-comments">
-       <%= form_with model: [@post, @comment], id: "form", local: true do |f|%>
-          <div class="field">
-            <%= f.text_field :text, placeholder:"コメントを入力...", class: :comment_form %>
-          </div>
-          <div class="actions">
-            <%= f.submit "コメントする", id: "comment",  class: :comment_btn  %>
-          </div>
-        <% end %> 
+      <% if user_signed_in? %>
+        <%= form_with model: [@post, @comment], id: "form", local: true do |f|%>
+            <div class="field">
+              <%= f.text_field :text, placeholder:"コメントを入力...", class: :comment_form %>
+            </div>
+            <div class="actions">
+              <%= f.submit "コメントする", id: "comment",  class: :comment_btn  %>
+            </div>
+          <% end %> 
+      <% end %> 
           <ul class="comments_lists">
             <% @comments.each do |comment| %>
               <li class="comments_list">
@@ -34,9 +36,12 @@
        </div> 
   </div>
 
-<%= link_to @post.user.nickname, user_path(@post.user), class: :showmy_btn %>
-<%= link_to "削除する", post_path(@post.id), method: :delete, class: :showdestroy_btn %>
-<%= link_to "編集する", edit_post_path(@post.id), class: :showedit_btn %>
-</div>
+<% if current_user.id == @post.user.id %>
+  <%= link_to "削除する", post_path(@post.id), method: :delete, class: :showdestroy_btn %>
+  <%= link_to "編集する", edit_post_path(@post.id), class: :showedit_btn %>
+  <% else %>
+  <%= link_to @post.user.nickname, user_path(@post.user), class: :showmy_btn %>
+  </div>
+<% end %>
 
 
