--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,7 +14,7 @@
   <div class="block2">
   <%= image_tag("YouTube-logo.png", class:"youtube-logo") %>
   <h1 class="youtube-h">This week's Musician</h1>
-  <iframe class="youtube" width="900" height="515" src="https://www.youtube.com/embed/eJ-FOKIFGKw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  <iframe class="youtube" width="900" height="515" src="https://www.youtube.com/embed/gitWeRgO3RY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="block3"></div>
   <div class="slide-one">
@@ -32,9 +32,9 @@
   $(function () {
     $(window).scroll(function () {
       $('.fadein').each(function () {
-        var targetElement = $(this).offset().top;
-        var scroll = $(window).scrollTop();
-        var windowHeight = $(window).height();
+        const targetElement = $(this).offset().top;
+        const scroll = $(window).scrollTop();
+        const windowHeight = $(window).height();
         if (scroll > targetElement - windowHeight + 150) {
             $(this).addClass('scrollin');
         }
