ビュー修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <p id="slideshow">
-   <img src="/assets/main1.jpg" alt="画像1" class="active">
+   <img src="/images/main1.jpg" alt="画像1" class="active">
    <img src="/assets/main2.jpg" alt="画像2">
    <img src="/assets/main3.jpg" alt="画像3">
    <img src="/assets/main4.jpg" alt="画像4">
