--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,12 @@
 <p id="slideshow">
-   <img src="/images/main1.jpg" alt="画像1" class="active">
-   <img src="/assets/main2.jpg" alt="画像2">
-   <img src="/assets/main3.jpg" alt="画像3">
-   <img src="/assets/main4.jpg" alt="画像4">
-   <img src="/assets/main5.jpg" alt="画像5">
-   <img src="/assets/main6.jpg" alt="画像5">
-   <img src="/assets/main7.jpg" alt="画像5">
+    <%= image_tag asset_path("main1.jpg", class:"active") %>
+    <%= image_tag asset_path("main2.jpg") %>
+    <%= image_tag asset_path("main3.jpg") %>
+    <%= image_tag asset_path("main4.jpg") %>
+    <%= image_tag asset_path("main5.jpg") %>
+    <%= image_tag asset_path("main6.jpg") %>
+    <%= image_tag asset_path("main7.jpg") %>
+    <%= image_tag asset_path("main1.jpg") %>
    <p class="aiu">Welcome to MyGear.</p>
    <p class="iu">MyGear へようこそ</p>
    <p class="eo">さっそく楽器の写真を共有しましょう !</p>
