ビュー修正3

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,11 @@
 <p id="slideshow">
-    <%= image_tag asset_path("main1.jpg", class:"active") %>
-    <%= image_tag asset_path("main2.jpg") %>
-    <%= image_tag asset_path("main3.jpg") %>
-    <%= image_tag asset_path("main4.jpg") %>
-    <%= image_tag asset_path("main5.jpg") %>
-    <%= image_tag asset_path("main6.jpg") %>
-    <%= image_tag asset_path("main7.jpg") %>
+   <%= image_tag("/main1.jpg", class:"active") %>
+   <%= image_tag("/main2.jpg") %>
+   <%= image_tag("/main3.jpg") %>
+   <%= image_tag("/main4.jpg") %>
+   <%= image_tag("/main5.jpg") %>
+   <%= image_tag("/main6.jpg") %>
+   <%= image_tag("/main7.jpg") %>
    <p class="aiu">Welcome to MyGear.</p>
    <p class="iu">MyGear へようこそ</p>
    <p class="eo">さっそく楽器の写真を共有しましょう !</p>
