--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -14,15 +14,7 @@
   <div class="block2">
   <%= image_tag("YouTube-logo.png", class:"youtube-logo") %>
   <h1 class="youtube-h">This week's Musician</h1>
-  <% iframe = content_tag(
-    :iframe,
-    '', # empty body
-    width: 560,
-    height: 315,
-    src: "https://www.youtube.com/embed/gitWeRgO3RY",
-    frameborder: 0,
-    allowfullscreen: true
-) %>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/uurpt_u7UiU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
   </div>
   <div class="block3"></div>
   <div class="slide-one">
