--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -625,7 +625,7 @@ html, body {
 }
 
 .regi {
-    background-image: url(regi.jpg);
+    background-image: image-url("regi.jpg");
     height: 789px;
     background-size: cover;
     background-position: center;
