--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -634,7 +634,7 @@ html, body {
 }
 
 .log {
-  background-image: url(login.jpg);
+  background-image: image-url("login.jpg");
   height: 789px;
   background-size: cover;
   background-position: center;
@@ -656,7 +656,7 @@ html, body {
 }
 
 .post-new {
-  background-image: url(post.jpg);
+  background-image: image-url("post.jpg");
   height: 789px;
   background-size: cover;
   background-position: center;
@@ -666,7 +666,7 @@ html, body {
 }
 
 .post-edit {
-  background-image: url(postedit.jpg);
+  background-image: iamge-url("postedit.jpg");
   height: 789px;
   background-size: cover;
   background-position: center;
@@ -740,8 +740,8 @@ textarea:focus {
 
 #slideshow {
   position: relative;
-  width:  1440px; /* 画像の横幅に合わせて記述 */
-  height: 789px; /* 画像の高さに合わせて記述 */
+  width:  1440px;
+  height: 789px;
 }
 #slideshow img {
   position: absolute;
@@ -760,7 +760,7 @@ textarea:focus {
 }
 
 .guitar {
-  background-image: url(guitar.jpg);
+  background-image: image-rl("guitar.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -770,7 +770,7 @@ textarea:focus {
 }
 
 .bass {
-  background-image: url(bass.jpg);
+  background-image: image-url("bass.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -779,7 +779,7 @@ textarea:focus {
 }
 
 .amp {
-  background-image: url(amp.jpg);
+  background-image: image-url("amp.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -788,7 +788,7 @@ textarea:focus {
 }
 
 .eff {
-  background-image: url(eff.jpg);
+  background-image: image-url("eff.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -797,7 +797,7 @@ textarea:focus {
 }
 
 .drum {
-  background-image: url(drum.jpg);
+  background-image: iamge-url("drum.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -806,7 +806,7 @@ textarea:focus {
 }
 
 .key {
-  background-image: url(key.jpg);
+  background-image: image-url("key.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -815,7 +815,7 @@ textarea:focus {
 }
 
 .pa {
-  background-image: url(pa.jpg);
+  background-image: image-url("pa.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -824,7 +824,7 @@ textarea:focus {
 }
 
 .acs {
-  background-image: url(acs.jpg);
+  background-image: image-url("acs.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -833,7 +833,7 @@ textarea:focus {
 }
 
 .ukulele {
-  background-image: url(ukulele.jpg);
+  background-image: image-url("ukulele.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -842,7 +842,7 @@ textarea:focus {
 }
 
 .sax {
-  background-image: url(sax.jpg);
+  background-image: image-url("sax.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -851,7 +851,7 @@ textarea:focus {
 }
 
 .trumpet {
-  background-image: url(trumpet.jpg);
+  background-image: image-url("trumpet.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -860,7 +860,7 @@ textarea:focus {
 }
 
 .violin {
-  background-image: url(violin.jpg);
+  background-image: image-url("violin.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -869,7 +869,7 @@ textarea:focus {
 }
 
 .strings {
-  background-image: url(strings.jpg);
+  background-image: image-url("strings.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -878,7 +878,7 @@ textarea:focus {
 }
 
 .winds {
-  background-image: url(wind.jpg);
+  background-image: image-url("wind.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -887,7 +887,7 @@ textarea:focus {
 }
 
 .dtm {
-  background-image: url(dtm.jpg);
+  background-image: image-url("dtm.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -896,7 +896,7 @@ textarea:focus {
 }
 
 .others {
-  background-image: url(others.jpg);
+  background-image: image-url("others.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
