--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,13 +8,7 @@
 
     <%= f.text_area :profile, placeholder:"プロフィール", id:"post_summary" %>
 
-    <%= f.email_field :email, placeholder:"メールアドレス * ", id:"user_email", autofocus: true, autocomplete: "email" %>
-
-    <%= f.password_field :password, placeholder:"パスワード * ", id:"user_password", autocomplete: "new-password" %>
-
-    <%= f.password_field :password_confirmation, placeholder:"パスワード再入力 * ", id:"user_password_confirmation", autocomplete: "new-password" %>
-
-    <button>Sign up</button>
+    <button>To edit</button>
 
   <% end %>
 </div>
