--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -25,5 +25,5 @@
   </div>
 
 <%= link_to "削除する", user_registration_path, method: :delete, class: :userdestroy_btn %>
-<%= link_to "編集する", "#", class: :useredit_btn %>
+<%= link_to "編集する", edit_user_registration_path, class: :useredit_btn %>
 </div>
