--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -18,6 +18,7 @@ div {
 body {
   font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN W3", sans-serif;
   color: #3b4043;
+  height: 100%;
 }
 
 li {
@@ -429,9 +430,9 @@ hr {
   width: 100%;
   height: auto;
   padding-top: 20px;
-  background: #83a4d4;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to left, #b6fbff, #83a4d4);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to left, #b6fbff, #8eaddd); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #83a4d4;
+  background: -webkit-linear-gradient(to left, #b6fbff, #83a4d4);
+  background: linear-gradient(to left, #b6fbff, #8eaddd);
 }
 
 .head-border {
@@ -483,9 +484,6 @@ hr {
 }
 
 
-
-
-/* Layout Styles */
 html, body {
   width: 100%;
   height: 100%;
