ビュー修正

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -664,7 +664,7 @@ html, body {
 }
 
 .post-edit {
-  background-image: iamge-url("postedit.jpg");
+  background-image: image-url("postedit.jpg");
   height: 789px;
   background-size: cover;
   background-position: center;
